[gd_scene load_steps=2 format=2]

[ext_resource path="res://Blackboard.gd" type="Script" id=1]

[node name="Blackboard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 655.0
margin_top = 23.0
margin_right = 766.0
margin_bottom = 53.0
text = "undo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="."]
margin_left = 511.843
margin_top = 16.8369
margin_right = 636.843
margin_bottom = 56.837
text = "Borrow"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeColorButton" type="Button" parent="."]
margin_left = 791.694
margin_top = 20.7551
margin_right = 923.694
margin_bottom = 54.7551
text = "ChangeBackground"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearButton" type="Button" parent="."]
margin_left = 42.0
margin_top = 18.0
margin_right = 127.0
margin_bottom = 50.0
text = "Clear"
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="toggled" from="CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="pressed" from="ChangeColorButton" to="." method="_on_ChangeColorButton_pressed"]
[connection signal="pressed" from="ClearButton" to="." method="_on_ClearButton_pressed"]
